[project]
name = "bn_quik"
version = "0.2.1"
description = "Backtrader-next connector for QUIK terminal"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "LEX"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

requires-python = ">=3.11"
dependencies = [
    "backtrader-next>=2.3.2",
    "quik-python>=1.2.0",
]
[project.urls]
"Homepage" = "https://github.com/Alex-Shur/bn_quik"
"Source" = "https://github.com/Alex-Shur/bn_quik"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
exclude = [
    "examples/",
    ".gitignore",
    ".git/",
    "requirements.txt",
    "THIRD-PARTY-NOTICES.txt",
]
