[project]
name = "bn_quik"
version = "1.1.0"
description = "Backtrader-next connector for QUIK terminal"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "LEX"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

requires-python = ">=3.11"
dependencies = [
    "backtrader-next>=2.3.2",
    "quik-python>=1.2.0",
    "pytz"
]
[project.urls]
"Homepage" = "https://github.com/Alex-Shur/bn_quik"
"Source" = "https://github.com/Alex-Shur/bn_quik"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
exclude = [
    "examples/",
    "lua/",
    ".gitignore",
    ".git/",
    "requirements.txt",
    "THIRD-PARTY-NOTICES.txt",
]
